--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -6,4 +6,4 @@
 	{% endfor %}
 </ul>
 
-<a href="{% url 'polls:detail' question.id %}">¿ Votar de nuevo ?</a>
+<a href="{% url 'polls:detail' question.id %}">¿ Votar de nuevo ? xxxx</a>
